Applied SquishedPotato fix for wishlist and group highlight

--- a/userstyle.css
+++ b/userstyle.css
@@ -281,7 +281,7 @@ hr {
 }
 
 .post .right {
-    background: #333 !important;
+    background: #333;
     border: 1px solid #444 !important;
     border-radius: 5px 5px 5px 5px;
 }
